--- a/BroadwayShows.Blazor/Shared/NavMenu.razor
+++ b/BroadwayShows.Blazor/Shared/NavMenu.razor
@@ -1,6 +1,9 @@
 ﻿@using System.Security.Claims;
-@using BroadwayShows.Blazor.Account;
-@inject AuthenticationStateProvider AuthenticationState
+@using Microsoft.AspNetCore.Authentication;
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.EntityFrameworkCore.Metadata.Internal;
+@inject NavigationManager NavigationManager
+
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom box-shadow">
@@ -14,20 +17,11 @@
         <div class="ml-auto">
             <ul class="navbar-nav">
                 <li class="nav-item">
+                    <NavLink class="nav-link" href="/Admin/admin" Match="NavLinkMatch.All"><span class="oi oi-admin" aria-hidden="true"></span> Admin</NavLink>
+                </li>
+                <li class="nav-item">
                     <NavLink class="nav-link" href="/" Match="NavLinkMatch.All"><span class="oi oi-home" aria-hidden="true"></span> Home</NavLink>
                 </li>
-                <ul class="nav navbar-nav navbar-right">
-                    @if (IsAuthenticated)
-                    {
-                        <li><img src="@UserProfile.ProfileImage" alt="@UserProfile.Name" /></li>
-                        <li><a href="/Account/Profile">Hello @UserProfile.Name!</a></li>
-                        <li><a id="qsLogoutBtn" href="/Account/Logout">Logout</a></li>
-                    }
-                    else
-                    {
-                        <li><a id="qsLoginBtn" href="/Account/Login">Login</a></li>
-                    }
-                </ul>
                 <li class="nav-item">
                     <NavLink class="nav-link" href="/about" Match="NavLinkMatch.All"><span class=" oi oi-info" aria-hidden="true"></span> About</NavLink>
                 </li>
@@ -50,30 +44,6 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
+
 }
 
-
-@code {
-    private bool IsAuthenticated { get; set; }
-    private UserProfile UserProfile { get; set; }
-
-    protected override async Task OnInitializedAsync()
-    {
-        var user = await GetUser();
-        IsAuthenticated = user.Identity.IsAuthenticated;
-
-        // TODO: Fetch UserProfile data from an API or some other means.
-        UserProfile = new UserProfile
-            {
-                Name = user.Identity.Name,
-                EmailAddress = user.Claims.FirstOrDefault(c => c.Type == ClaimTypes.Email)?.Value,
-                ProfileImage = user.Claims.FirstOrDefault(c => c.Type == "picture")?.Value
-            };
-    }
-
-    private async Task<ClaimsPrincipal> GetUser()
-    {
-        var authState = await AuthenticationState.GetAuthenticationStateAsync();
-        return authState.User;
-    }
-}
