--- a/BroadwayShows.Blazor/Pages/_Host.cshtml
+++ b/BroadwayShows.Blazor/Pages/_Host.cshtml
@@ -14,6 +14,7 @@
     <link href="BroadwayShows.Blazor.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.1/css/all.min.css">
+    <link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet" />
 
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
